// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request Command with flags: alias %s %s 1`] = `
Array [
  "",
  "  Status              Endpoint            
",
  "  200                 https://example.org/anything
",
  "
",
  "\\"{\\"hello\\": \\"world\\"}\\"
",
]
`;

exports[`Request Command with flags: alias --as-json %s 1`] = `
Array [
  "{\\"status\\":200,\\"headers\\":[],\\"body\\":\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"}
",
]
`;

exports[`Request Command with flags: alias --as-json --verbose 1`] = `
Array [
  "{\\"request\\":{\\"body\\":{\\"name\\":\\"David\\"},\\"endpoint\\":\\"https://example.org/anything\\"},\\"response\\":{\\"status\\":200,\\"headers\\":[],\\"body\\":\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"},\\"body\\":\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"}
",
]
`;

exports[`Request Command with flags: alias --no-format %s 1`] = `
Array [
  "200
",
  "https://example.org/anything
",
  "[]
",
  "\\"{\\\\\\"hello\\\\\\": \\\\\\"world\\\\\\"}\\"
",
]
`;

exports[`Request Command with flags: alias --quiet %s 1`] = `Array []`;

exports[`Request Command with flags: alias --verbose %s 1`] = `
Array [
  "",
  "  Status              Endpoint            
",
  "  200                 https://example.org/anything
",
  "
",
  "{
  request: {
    body: {
      name: \\"David\\"
    },
    endpoint: \\"https://example.org/anything\\"
  },
  response: {
    status: 200,
    headers: [],
    body: \\"{\\"hello\\": \\"world\\"}\\"
  },
  body: \\"{\\"hello\\": \\"world\\"}\\"
}
",
]
`;
